# w_notes

./: .gitignore  README.md  crash.txt
.claude/: CLAUDE.md  project-context.md
.claude/agents/: code-architect.md  code-reviewer.md  debugger.md  infra-terraform.md  sync-data-specialist.md  ui-design-reviewer.md
.githooks/: README.md  pre-push
.github/workflows/: autofix-ship.yml  deploy-backend.yml  mobile-e2e.yml  sentry-autofix.yml  slow-tests.yml  tests.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_firebase_uid.py  0003_copa_file_columns.py  0004_note_plugin_columns.py  0005_issues_and_folder_kind.py  0006_issue_type_ids.py  0007_note_published.py
backend/app/: config.py  conversion.py  db.py  deps.py  main.py  models.py  publisher.py  schemas.py  storage.py
backend/app/routers/: convert.py  embed.py  files.py  github_issues.py  health.py  sentry.py  sync.py
backend/docs/autofix/: README.md  sentry-autofix.yml
backend/tests/: README.md  conftest.py  test_autofix_guard.py  test_first_contact.py  test_github_errors.py  test_github_issues_errors.py  test_publish.py  test_sync.py  test_sync_concurrency.py
notes-app/: .easignore  .env.example  .gitignore  app.config.js  app.json  eas.json  metro.config.js  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
notes-app/.maestro/: README.md  note-persistence.yaml  smoke.yaml
notes-app/e2e/: README.md  smoke.spec.ts
notes-app/public/: _headers  _redirects
notes-app/scripts/: build-android-e2e.mjs  clean-emulator.mjs  fix-web-export.mjs  test-mobile.mjs  verify-web-export.mjs
notes-app/src/: global.css
terraform/: .gitignore  .terraform.lock.hcl  README.md  backend.hcl.example  dns.tf  ecr.tf  ecs.tf  github_oidc.tf  iam.tf  locals.tf  network.tf  outputs.tf  providers.tf  rds.tf  s3.tf  secrets.tf  security.tf  terraform.tfvars.example  tunnel.tf  variables.tf  versions.tf
(+119 files in other folders)
