[project]
name = "wnotes-backend"
version = "0.1.0"
description = "Sync backend for w_notes (FastAPI + Postgres)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sentry-sdk[fastapi]>=2.18",
    "firebase-admin>=6.5",
    "boto3>=1.35",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
