[project]
name = "wnotes-backend"
version = "0.1.0"
description = "Sync backend for w_notes (FastAPI + Postgres)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sentry-sdk[fastapi]>=2.18",
    "firebase-admin>=6.5",
    "boto3>=1.35",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Test-only tooling. `pip install -e ".[dev]"` to get it.
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `auto` treats every `async def test_*` as an asyncio test, so no per-test
# decorator is needed. Both loop scopes are session-wide so the one engine and
# the migrated database are shared by every test instead of being torn down and
# rebuilt around each function's private event loop.
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "slow: stress/race tests — seconds not milliseconds, and probabilistic (a pass is evidence, not proof). Excluded by default; run with `pytest -m slow`.",
]
# Keep the default run fast and deterministic so it stays worth running on every
# save. The slow marker is opt-in.
addopts = "-m 'not slow'"
